--- a/savis4/src/app/problems/problems-components/bar-chart/bar-chart.component.html
+++ b/savis4/src/app/problems/problems-components/bar-chart/bar-chart.component.html
@@ -1,41 +1,55 @@
 <app-navbar></app-navbar>
 
 <div class="bar-chart-container">
-  <h1 class="title">{{'problems_bar_chart_title' | translate}}</h1>
+  <h1 class="title">{{ 'problems_bar_chart_title' | translate }}</h1>
   <div button="back" routerLink="/problems" class="back-button">
-      &larr; {{ 'problems_back' | translate }}
-    </div>
+    &larr; {{ 'problems_back' | translate }}
+  </div>
   <div class="content">
-    <!--left side of the page-->
+    <!-- Left side: Question and Multiple Choices -->
     <div class="text-section">
       <div class="green-box">
-        <p [innerHTML]="'Word Problem' | translate"></p>
+        <p>{{ question }}</p>
       </div>
-      <!--textbox for user to type their answer-->
-      <textarea class = "textbox" rows = "1" placeholder="Type the answer here" [(ngModel)] = "inputAnswer">
-      </textarea>
-      <!--submit button-->
-      <button class = "submit-button" (click)="submitAnswer()">Submit Answer</button>
-      <!--show if user answer is correct or incorrect-->
-      <div *ngIf = "showAnswer" class = "answer-box" [ngClass] = "{correct: answerIsCorrect, incorrect: !answerIsCorrect}">
-        <p>{{answerIsCorrect? 'Correct!' : 'Incorrect answer. Please try again!'}}</p>
-        <p *ngIf = "!answerIsCorrect">
+      <!-- Multiple-choice options -->
+      <div class="multiple-choice">
+        <div *ngFor="let choice of multipleChoices; let i = index">
+          <input
+            type="radio"
+            [value]="choice"
+            [(ngModel)]="selectedAnswer"
+            name="choices"
+            [id]="'choice-' + i"
+          />
+          <label class="choice-label" [for]="'choice-' + i">{{ choice }}</label>
+        </div>
+      </div>
+      <!-- Submit button -->
+      <button class="submit-button" (click)="submitAnswer()">Submit Answer</button>
+      <!-- Show if user answer is correct or incorrect -->
+      <div
+        *ngIf="showAnswer"
+        class="answer-box"
+        [ngClass]="{ correct: answerIsCorrect, incorrect: !answerIsCorrect }"
+      >
+        <p>{{ answerIsCorrect ? 'Correct!' : 'Incorrect answer. Please try again!' }}</p>
+        <p *ngIf="!answerIsCorrect">
           Correct answer: {{ correctAnswer }}
         </p>
-        <!--hide answer button-->
-        <button (click) = "hideAnswer()" class="hide-button">Hide Answer</button>
+        <!-- Hide answer button -->
+        <button (click)="hideAnswer()" class="hide-button">Hide Answer</button>
       </div>
+      <!-- Generate new problem button -->
+      <button class="generate-button" (click)="generateNewProblem()">Generate New Problem</button>
     </div>
 
-    <!--left side of the page-->
-    <!--add blank bar chart-->
-    <div class ="chart container">
+    <!-- Right side: Bar Chart -->
+    <div class="chart-container">
       <canvas #inputChart width="900" height="400"></canvas>
     </div>
-
   </div>
 </div>
 
 <footer class="static-footer">
-  {{ "nav_copyright" | translate }}
+  {{ 'nav_copyright' | translate }}
 </footer>
